Always align text left, fixes FF bug

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -353,7 +353,7 @@
     }
 
     @include breakpoint($small) {
-      text-align: right;
+      text-align: left;
 
       .archive__item-teaser {
         float: right;
